crates/courier-ftp/src/ui/snapshots/courier_ftp__ui__tests__classic_160x48.snap
---
source: crates/courier-ftp/src/ui/tests.rs
expression: terminal.backend()
---
"┌ Quickconnect ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Host: host or URL                                              User: ______________________________ Pass: _________________________ Port: ______ [Connect] [▾]│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tabs: [1 local]                                                                                                                                                "
"┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status:   Connecting to example.com:21...                                                                                                                     │"
"│Response: 230 Login successful.                                                                                                                               │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Local:  ─────────────────────────────────────────────────────────────────────┐┌ Remote: not connected ───────────────────────────────────────────────────────┐"
"│  Name▲                                   Size Type           Modified        ││Not connected to any server.                                                  │"
"│  assets/                                      Directory                      ││Ctrl-s: Site Manager · Ctrl-k: quickconnect                                   │"
"│  index.html                           4.0 KiB HTML file                      ││                                                                              │"
"│  style.css                              900 B CSS file                       ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│                                                                              ││                                                                              │"
"│2 files and 1 directory. Total size: 4.9 KiB                                  ││                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Queue (0) · Failed (0) · Successful (0) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│The queue is empty.                                                                                                                                           │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" — │ Auto │ ⇅ limit off │ Queue: empty │ F1 help  F5 copy  F7 mkdir  F8 delete  F10 quit                                                                        "
