crates/courier-ftp/src/ui/snapshots/courier_ftp__ui__tests__classic_200x60.snap
---
source: crates/courier-ftp/src/ui/tests.rs
expression: terminal.backend()
---
"┌ Quickconnect ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Host: ________   User: ________   Pass: ________   Port: ________   [Connect]                                                                                                                         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tabs: [1 local]                                                                                                                                                                                        "
"┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status:   Connecting to example.com:21...                                                                                                                                                             │"
"│Response: 230 Login successful.                                                                                                                                                                       │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Local:  ─────────────────────────────────────────────────────────────────────────────────────────┐┌ Remote: not connected ───────────────────────────────────────────────────────────────────────────┐"
"│..                                                                                                ││Ctrl-k: quickconnect · Ctrl-s: Site Manager                                                       │"
"│assets/                                                                                           ││                                                                                                  │"
"│index.html                                                                                        ││                                                                                                  │"
"│style.css                                                                                         ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"│                                                                                                  ││                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Queue (0) · Failed (0) · Successful (0) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│The queue is empty.                                                                                                                                                                                   │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"│                                                                                                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" — │ Auto │ ⇅ limit off │ Queue: empty │ F1 help  F5 copy  F7 mkdir  F8 delete  F10 quit                                                                                                                "
