crates/courier-ftp/src/ui/snapshots/courier_ftp__ui__tests__classic_80x24.snap
---
source: crates/courier-ftp/src/ui/tests.rs
expression: terminal.backend()
---
"┌ Quickconnect ────────────────────────────────────────────────────────────────┐"
"│Host: host or URL      User: ________ Pass: _______ Port: ______ [Connect] [▾]│"
"└──────────────────────────────────────────────────────────────────────────────┘"
" Tabs: [1 local]                                                                "
"┌ Message log ─────────────────────────────────────────────────────────────────┐"
"│Status:   Connecting to example.com:21...                                     │"
"│Response: 230 Login successful.                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Local:  ─────────────────────────────┐┌ Remote: not connected ───────────────┐"
"│  Name▲                           Size││Not connected to any server.          │"
"│  assets/                             ││Ctrl-s: Site Manager · Ctrl-k:        │"
"│  index.html                   4.0 KiB││quickconnect                          │"
"│  style.css                      900 B││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│                                      ││                                      │"
"│2 files and 1 directory. Total size: 4││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘"
"┌ Queue (0) · Failed (0) · Successful (0) ─────────────────────────────────────┐"
"│The queue is empty.                                                           │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" — │ Auto │ ⇅ limit off │ Queue: empty                                          "
