crates/courier-ftp/src/ui/snapshots/courier_ftp__ui__tests__compare_120x30.snap
---
source: crates/courier-ftp/src/ui/tests.rs
expression: t.backend()
---
"┌ Quickconnect ────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Host: host or URL                            User: ____________________ Pass: _________________ Port: ______ [Connect]│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tabs: [1 local]                                                                                                        "
"┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status:   Connecting to example.com:21...                                                                             │"
"│Response: 230 Login successful.                                                                                       │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ ⇄ Local: /home/me/site ──────────────────────────────────┐┌ ⇄ Remote: /var/www ──────────────────────────────────────┐"
"│  Name▲                              Size Modified        ││  Name▲                   Size Modified         Perms     │"
"│  ..                                                      ││  ..                                                      │"
"│                                                          ││  cgi-bin/                                                │"
"│  docs/                                                   ││                                                          │"
"│  img/                                                    ││  img/                                                    │"
"│  big.css                           900 B 2026-10-08 18:00││  big.css              4.0 KiB 2026-10-08 18:00           │"
"│  new.html                           50 B 2026-10-08 18:30││  new.html                50 B 2026-10-08 18:00           │"
"│  only-local.txt                      1 B 2026-10-08 18:00││                                                          │"
"│                                                          ││  only-remote.txt          2 B 2026-10-08 18:00           │"
"│  same.txt                           10 B 2026-10-08 18:00││  same.txt                10 B 2026-10-08 18:00           │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│only here · newer · differs  4 files and 2 directories. To││only here · newer · differs  4 files and 2 directories. To│"
"└──────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"┌ Queue (0) · Failed (0) · Successful (0) ─────────────────────────────────────────────────────────────────────────────┐"
"│The queue is empty.                                                                                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" — │ Auto │ ⇅ limit off │ ⇄ sync │ ≠ compare │ Queue: empty │ F1 help  F5 copy  F7 mkdir  F8 delete  F10 quit           "
