crates/courier-ftp/src/ui/snapshots/courier_ftp__ui__tests__explorer_120x40.snap
---
source: crates/courier-ftp/src/ui/tests.rs
expression: terminal.backend()
---
"┌ Quickconnect ────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Host: host or URL                            User: ____________________ Pass: _________________ Port: ______ [Connect]│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Tabs: [1 local]                                                                                                        "
"┌ Message log ─────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Status:   Connecting to example.com:21...                                                                             │"
"│Response: 230 Login successful.                                                                                       │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ Local tree ───────┐┌ Local:  ────────────────────────────┐┌ Remote tree ──────┐┌ Remote: not connected ──────────────┐"
"│▾ /                ││  Name▲                          Size││Not connected.     ││Not connected to any server.         │"
"│└─▸ assets         ││  assets/                            ││                   ││Ctrl-s: Site Manager · Ctrl-k:       │"
"│                   ││  index.html                  4.0 KiB││                   ││quickconnect                         │"
"│                   ││  style.css                     900 B││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││                                     ││                   ││                                     │"
"│                   ││2 files and 1 directory. Total size: ││                   ││                                     │"
"└───────────────────┘└─────────────────────────────────────┘└───────────────────┘└─────────────────────────────────────┘"
"┌ Queue (0) · Failed (0) · Successful (0) ─────────────────────────────────────────────────────────────────────────────┐"
"│The queue is empty.                                                                                                   │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" — │ Auto │ ⇅ limit off │ Queue: empty │ F1 help  F5 copy  F7 mkdir  F8 delete  F10 quit                                "
